# statcast-bigquery

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: _pybaseball_columns_2024-04-01.txt  discover_pybaseball_columns.py
statcast_bigquery/: __init__.py  cli.py  client.py  runs.py  schema.py  writer.py
statcast_bigquery/docs/: __init__.py  example_queries.py  pitfalls.py  renderers.py  statsapi_map.py  taxonomy.py
statcast_bigquery/games/: client.py  schema.py  teams.py  writer.py
statcast_bigquery/standings/: client.py
statcast_bigquery/umpires/: client.py  schema.py  writer.py
statcast_bigquery/verify/: __init__.py  base.py  compare.py  savant.py  standings.py
tests/: test_cli.py  test_client.py  test_example_queries.py  test_games.py  test_idempotency.py  test_pitfalls.py  test_renderers.py  test_runs.py  test_schema.py  test_standings_client.py  test_taxonomy.py  test_umpires.py  test_verify_compare.py  test_verify_savant.py  test_verify_standings.py  test_writer.py
tests/fixtures/: __init__.py  make_savant_fixture.py  make_statcast_fixture.py  savant_batter_2024.parquet  savant_leaderboard_2024.parquet  savant_pitcher_2024.parquet  statcast_sample_2024-04-01.parquet
