[project]
name = "statcast-bigquery"
version = "0.3.1"
description = "Statcast → BigQuery: idempotent ingestion + LLM-friendly docs + Baseball Savant verification"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jason Blahovec" }]
requires-python = ">=3.11"
keywords = ["mlb", "baseball", "statcast", "bigquery", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pybaseball>=2.2.7,<3.0",
    "pandas>=2.0,<3.0",
    "google-cloud-bigquery>=3.20,<4.0",
    "pyarrow>=15.0,<19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "build>=1.2.0",
    "sqlglot>=25.0",
]

[project.scripts]
statcast-bigquery = "statcast_bigquery.cli:main"

[project.urls]
Homepage = "https://github.com/blahovec-labs/statcast-bigquery"
Issues = "https://github.com/blahovec-labs/statcast-bigquery/issues"
Changelog = "https://github.com/blahovec-labs/statcast-bigquery/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["statcast_bigquery"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
